DATA-1513 Add dynamic stats to homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,22 +10,12 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-2 offset-sm-2 text-center">
-      <h1 class="text-warning">15</h1>
-      <h5 class="text-secondary">Schools</h5>
+    {% for stat in stats %}
+    <div class="col-sm-2 {% if stat == stats|first %}offset-sm-2{% endif %} text-center">
+      <h1 class="text-warning">{{ stat.value }}</h1>
+      <h5 class="text-secondary">{{ stat.metric }}</h5>
     </div>
-    <div class="col-sm-2 text-center">
-      <h1 class="text-warning">5,718</h1>
-      <h5 class="text-secondary">Students Enrolled</h5>
-    </div>
-    <div class="col-sm-2 text-center">
-      <h1 class="text-warning">3,789</h1>
-      <h5 class="text-secondary">Total Alumni</h5>
-    </div>
-    <div class="col-sm-2 text-center">
-      <h1 class="text-warning">634</h1>
-      <h5 class="text-secondary">Team & Family <br>on a Mission</h5>
-    </div>
+    {% endfor %}
   </div>
   <img class="logo mx-auto d-block" src="{% static "images/kipp_logo_primary.png" %}">
 </div>
