--- a/templates/_nav_dropdown.html
+++ b/templates/_nav_dropdown.html
@@ -1,17 +1,26 @@
 <ul class="navbar-nav pl-5">
   {% for category in categories %}
-    <li class="nav-item dropdown">
-      <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        {{ category.name }}
+  <li class="nav-item dropdown">
+    <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+      aria-haspopup="true" aria-expanded="false">
+      {{ category.name }}
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       {% for report in reports %}
       {% if report.category == category %}
-      <a class="dropdown-item text-secondary small" href="{% url "report" report.id %}">{{ report.name }}</a>
+      {% if report.subcategory %}
+      <div class="dropdown-divider"></div>
+      <h6 class="dropdown-header">{{ report.subcategory.name }}</h6>
+      <a class="dropdown-item text-secondary" href="{% url "report" report.id %}"><span
+          class="ml-3">{{ report.name }}</span></a>
+
+      {% else %}
+      <a class="dropdown-item text-secondary" href="{% url "report" report.id %}">{{ report.name }}</a>
+      {% endif %}
+
       {% endif %}
       {% endfor %}
     </div>
-    </li>
-    {% endfor %}
+  </li>
+  {% endfor %}
 </ul>
-
