DATA-1526 Fix report owner issues

--- a/templates/_report_owner_info.html
+++ b/templates/_report_owner_info.html
@@ -1,5 +1,5 @@
 <div class="col-sm-3 offset-sm-1">
-  {% if report.owner.avatar_url %}
+  {% if report.owner.profile.avatar_url %}
   <img class="avatar_md" src="{{ report.owner.profile.avatar_url }}">
   {% else %}
   <span class="fa-stack fa-3x text-info">
