--- a/templates/_sidepanel.html
+++ b/templates/_sidepanel.html
@@ -25,6 +25,11 @@
     </div>
     <!--Report owner-->
     <div class="row">
+      <div class="col-sm-11 offset-sm-1">
+        <h6 class="text-secondary">Created by:</h6>
+      </div>
+    </div>
+    <div class="row">
       {% include "_report_owner_info.html" %}
     </div>
     <!--Report stats -->
