--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,20 +1,22 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark">
   {% if user.is_authenticated %}
-    <a class="navbar-brand" href="{% url "profile" %}">
-  {% else %}
+  <a class="navbar-brand" href="{% url "profile" %}">
+    {% else %}
     <a class="navbar-brand" href="/">
-  {% endif %}
-      <strong>KIPP:</strong> Galaxy
+      {% endif %}
+      <img src="{% static "images/galaxy_logo.png" %}" class="kipp-prompt">
     </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-    {% if user.is_authenticated %}
+    <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+      {% if user.is_authenticated %}
       {% include "_nav_dropdown.html" %}
       {% include "_nav_searchbar.html" %}
       {% include "_nav_profile.html" %}
-    {% endif %}
-  </div>
+      {% endif %}
+    </div>
 </nav>
