--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load tz %}
 {% block content %}
 
 <div class="container">
@@ -60,9 +60,8 @@
             <table class="table table-hover">
               <thead>
                 <tr>
-                  <th scope="col">Report</th>
+                  <th scope="col">Data Tool</th>
                   <th scope="col">Category</th>
-                  <th scope="col">Timestamp</th>
                 </tr>
               </thead>
               <tbody>
@@ -70,7 +69,6 @@
                 <tr>
                   <td><a href="{% url "report" favorite.report.id %}">{{ favorite.report.name }}</a></td>
                   <td>{{ favorite.report.category }}</td>
-                  <td>{{ favorite.timestamp }}</td>
                 </tr>
                 {% endfor %}
               </tbody>
@@ -83,7 +81,7 @@
               <thead>
                 <tr>
                   <th scope="col">Page</th>
-                  <th scope="col">Timestamp</th>
+                  <th scope="col">Last Viewed</th>
                   <th scope="col"># Views</th>
                 </tr>
               </thead>
@@ -91,7 +89,7 @@
                 {% for rc in recently_viewed %}
                 <tr>
                   <td><a href="{{ rc.page }}">{{ rc.page }}</a></td>
-                  <td>{{ rc.timestamp }}</td>
+                  <td>{{ rc.timestamp|localtime }}</td>
                   <td>{{ rc.views }}</td>
                 </tr>
                 {% endfor %}
