--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 {% block content %}
 <div class="jumbotron jumbotron-fluid galaxy-banner">
   <div class="container text-center">
-    <h1 class="text-white"><strong>Explore your data.</strong></h1>
-    <a href="{% url "login" %}" class="btn btn-lg btn-warning text-white">LAUNCH</a>
+    <h1 class="text-white "><strong>Explore your data.</strong></h1>
+    <a href="{% url "login" %}" class="btn btn-lg btn-warning text-white"><span class="small">LAUNCH</span></a>
   </div>
 </div>
 
