--- a/templates/search.html
+++ b/templates/search.html
@@ -6,12 +6,12 @@
   <meta id="search-id" data-search="{{ search_id }}">
   <h1 class="text-muted pb-3">Search Results for: <span class="small">"{{ search_term }}"</small></h1>
   <ul>
-    {% if reports %}
-      {% for report in reports %}
-        {% include "_search_card.html" %}
-      {% endfor %}
+    {% if search_results %}
+    {% for report in search_results %}
+    {% include "_search_card.html" %}
+    {% endfor %}
     {% else %}
-      <h5 class="text-warning">No results found</h5>
+    <h5 class="text-warning">No results found</h5>
     {% endif %}
   </ul>
 </div>
