PROJ-139 Fix missing tabs in production

--- a/templates/_tableau_iframe_ssl.html
+++ b/templates/_tableau_iframe_ssl.html
@@ -3,7 +3,7 @@
     <param name='path' value='trusted/{{auth_ticket}}{{ report.site_root }}/views/{{report.embed_name}}' />
     <param name='toolbar' value='top' />
     <param name='alerts' value='no' />
-    <param name='tabs' value='no' />
+    <param name='tabs' value='{{ report.is_tabbed|yesno }}' />
     <param name='subscriptions' value='no' />
     <param name='customViews' value='no' />
   </object>
