Add legend and info text popover

--- a/templates/_hh_legend.html
+++ b/templates/_hh_legend.html
@@ -1,12 +1,20 @@
-<div class="col-sm-2 ml-3">
+<div class="row ml-1 mr-1">
+    <p>Goal targets are calculated bottom up. The goal for each school for a given metric is set according to an
+        individualized growth goal based on the prior year data.</p>
+    <p><em><span class="text-dark-orange">Click the metric score to see a growth chart.</span></em></p>
+</div>
+<div class="row ml-1">
+    <p><strong>Color Legend:</strong></p>
+</div>
+<div class="row ml-3">
     <i class="fas fa-square text-danger"></i>
-    <span class="small text-muted"> Below Target</span>
+    <span class="small text-muted pl-1"> Below Target</span>
 </div>
-<div class="col-sm-2">
+<div class="row ml-3">
     <i class="fas fa-square text-secondary"></i>
-    <span class="small text-muted"> Near Target</span>
+    <span class="small text-muted pl-1"> Near Target</span>
 </div>
-<div class="col-sm-2">
+<div class="row ml-3">
     <i class="fas fa-square text-success"></i>
-    <span class="small text-muted"> Meeting Target</span>
+    <span class="small text-muted pl-1"> Meeting Target</span>
 </div>
