--- a/templates/_nav_searchbar.html
+++ b/templates/_nav_searchbar.html
@@ -1,6 +1,8 @@
+{% if request.user.profile %}
 <form class="form-inline" id="search-bar" method="POST" action="{% url 'search' %}">
   {% csrf_token %}
-  <input class="form-control mr-sm-2" type="search" id="search-term" name="search-term" placeholder="Search" aria-label="Search">
+  <input class="form-control mr-sm-2" type="search" id="search-term" name="search-term" placeholder="Search"
+    aria-label="Search">
   <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
 </form>
-
+{% endif %}
