Add style changes for High Health

--- a/templates/_nav_dropdown.html
+++ b/templates/_nav_dropdown.html
@@ -1,4 +1,5 @@
 <ul class="navbar-nav pl-5">
+  {% if request.user.profile.job_title.role.role_type == 'L' %}
   <li class="nav-item dropdown">
     <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false">
@@ -6,12 +7,12 @@
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       {% for school_level in school_levels %}
-      <a class="dropdown-item text-secondary small" href="{% url "high_health" school_level.id %}">
-        <span class="ml-3">{{ school_level.display_name }}</span>
-      </a>
+      <a class="dropdown-item text-secondary small"
+        href="{% url "high_health" school_level.id %}">{{ school_level.display_name }}</a>
       {% endfor %}
     </div>
   </li>
+  {% endif %}
 
 
   {% for category in categories %}
