--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -20,7 +20,7 @@
 
 </div>
 
-<div class="container">
+<div class="col-sm-10 offset-sm-1">
   <table class="table table-hover mt-3">
     <thead>
       <tr class="small text-center">
