--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -4,21 +4,21 @@
 {% load static %}
 
 {% block content %}
-<div class="container pt-3">
-  <div class="row">
-    <div class="col-sm">
-      <h1>High Health ({{ school_level.display_name }})</h1>
-    </div>
-    <div class="col-sm-3 text-right">
-      <button type="button" onclick="openNav()" class="btn btn-warning btn-circle hh-info" data-toggle="popover"
-        data-placement="bottom" title="High Health Goals" data-trigger="hover"
-        data-content='{% include "_hh_legend.html" %}'>
-        <i class="fas fa-info"></i>
-      </button>
-    </div>
-  </div>
 
+<div class="row pt-3">
+  <div class="col-sm-7 offset-sm-1">
+    <h1>High Health ({{ school_level.display_name }})</h1>
+  </div>
+  <div class="col-sm-3 text-right">
+    <button type="button" onclick="openNav()" class="btn btn-warning btn-circle hh-info" data-toggle="popover"
+      data-placement="left" title="High Health Goals" data-trigger="hover"
+      data-content='{% include "_hh_legend.html" %}'>
+      <i class="fas fa-info"></i>
+    </button>
+  </div>
 </div>
+
+
 
 <div class="col-sm-10 offset-sm-1">
   <table class="table table-hover mt-3">
@@ -40,14 +40,14 @@
           data-content="{{ metric.metric.essential_question.description }}">
           {{ metric.metric.essential_question }}
         </td>
-        <td>
+        <td style="min-width:240px">
+          <i class="fas fa-info-circle text-primary pl-1 metric-def" data-toggle="popover" data-trigger="hover"
+            title="{{ metric.metric }}" data-content="{{ metric.metric.definition }}"></i>
           <a href="{% if metric.metric.report %}{% url "report" metric.metric.report.id %}{% endif %}">
             {{ metric.metric }}
           </a>
-          <i class="fas fa-info-circle text-primary pl-2 metric-def" data-toggle="popover" data-trigger="hover"
-            title="{{ metric.metric }}" data-content="{{ metric.metric.definition }}"></i>
         </td>
-        <td class="text-center">
+        <td class="text-center" style="min-width:110px">
           <span class="small text-muted">
             {{ metric.last_updated|naturalday }}
           </span>
@@ -65,7 +65,9 @@
           {% with "chart_"|addstr:measure.metric.id|addstr:"_"|addstr:measure.school.id as chart_id %}
           <span data-toggle="modal" data-target="#{{ modal_id }}" class="hh_value text-{{ measure|goal_format }}"
             data-metric-id="{{ measure.metric.id }}" data-school-id="{{ measure.school.id }}">
-            {{ measure.value|stringformat:'d' }}%
+            <span data-toggle="tooltip" data-placement="right" title="{{ measure|goal_distance }}">
+              {{ measure.value|stringformat:'d' }}%
+            </span>
           </span>
           {% include "_chart_modal.html" with title=measure.school  modal_id=modal_id chart_id=chart_id last_updated=measure.date %}
           {% endwith %}
@@ -86,6 +88,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.js">
 </script>
 <script src="{% static "js/hh_popover.js" %}"></script>
+<script src="{% static "js/tooltip.js" %}"></script>
 <script src="{% static "js/hh_chart_modal.js" %}"></script>
 
 {% endblock %}
