Fix high_health permissions and chart axes

--- a/templates/_hh_legend.html
+++ b/templates/_hh_legend.html
@@ -8,13 +8,13 @@
 </div>
 <div class="row ml-3">
     <i class="fas fa-square text-danger"></i>
-    <span class="small text-muted pl-1"> Below Target</span>
+    <span class="small text-muted pl-1"> Declining since YA</span>
 </div>
 <div class="row ml-3">
     <i class="fas fa-square text-secondary"></i>
-    <span class="small text-muted pl-1"> Near Target</span>
+    <span class="small text-muted pl-1"> Improving since YA</span>
 </div>
 <div class="row ml-3">
     <i class="fas fa-square text-success"></i>
-    <span class="small text-muted pl-1"> Meeting Target</span>
+    <span class="small text-muted pl-1"> Meeting Goal</span>
 </div>
