Add new text to legend

--- a/templates/_hh_legend.html
+++ b/templates/_hh_legend.html
@@ -1,6 +1,7 @@
 <div class="row ml-1 mr-1">
-    <p>Goal targets are calculated bottom up. The goal for each school for a given metric is set according to an
-        individualized growth goal based on the prior year data.</p>
+    <p><strong>Goals differ by school and metric.</strong> For each metric, schools close to our benchmarks have the
+        same
+        achievement-oriented goals, while schools further from these have the same growth-oriented goals.</p>
     <p><em><span class="text-dark-orange">Click the metric score to see a growth chart.</span></em></p>
 </div>
 <div class="row ml-1">
