--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,19 +1,18 @@
 <div ulass="container">
   <div class="row">
-    <div class="col-sm-12 col-md-8 text-right text-md-left">
-      <span class="text-muted ">Made with <i class="fas fa-heart"></i> &amp; <i class="fas fa-coffee"></i> by <a
-          href="https://sites.google.com/kippbayarea.org/launchpad/our-rso-team/data-evaluation-team" class="text-light"
-          target=”_blank”>Team Data</a></span>
+    <div class="col-sm-12 col-md-7 text-right text-md-left">
+      <span class="text-footer">Made with <i class="fas fa-heart"></i> &amp; <i class="fas fa-coffee"></i> by <a
+          href="https://sites.google.com/kippbayarea.org/launchpad/our-rso-team/data-evaluation-team"
+          class="text-footer" target=”_blank”>Team Data</a></span>
     </div>
-    <div class="col-sm-12 col-md-2 text-right">
-      <span class="text-muted">&copy; KIPP Bay Area</span>
+    <div class="col-sm-12 col-md-3 text-right">
+      <span class="text-footer">&copy; KIPP Northern California</span>
     </div>
-    <div class="col-sm-12 col-md-2 text-right">
-      <span class="text-muted"><a
-          href="https://docs.google.com/document/d/1nxzgjio1nCFmFL7Ad9itF9XR18PXWIjMZuGqWvMwoSg/edit?usp=sharing"
-          class="text-white" target=”_blank”>Terms</a> + <a
-          href="https://docs.google.com/document/d/19z3NpsHmH8JYz7HskeRDYkh-8VbqU8H5o_lh51qAcTc/edit?usp=sharing"
-          class="text-white" target=”_blank”>Privacy</a></span>
+    <div class="col-sm-12 col-md-2 text-right text-footer">
+      <a href="https://docs.google.com/document/d/1nxzgjio1nCFmFL7Ad9itF9XR18PXWIjMZuGqWvMwoSg/edit?usp=sharing"
+        class="text-footer" target=”_blank”>Terms</a> + <a
+        href="https://docs.google.com/document/d/19z3NpsHmH8JYz7HskeRDYkh-8VbqU8H5o_lh51qAcTc/edit?usp=sharing"
+        class="text-footer" target=”_blank”>Privacy</a>
     </div>
   </div>
 </div>
