--- a/templates/_report_owner_info.html
+++ b/templates/_report_owner_info.html
@@ -9,7 +9,7 @@
   {% endif %}
 </div>
 <div class="col-sm-8">
-  <h6 class="text-info">
+  <h6 class="text-primary">
     {{ report.owner.first_name }} {{ report.owner.last_name}}
   </h6>
   <span class="text-muted small">
