--- a/templates/_report_stats.html
+++ b/templates/_report_stats.html
@@ -1,3 +1,4 @@
-<div class="col-sm-12 text-info">
-  <i class="{{ icon_type }}"></i> {{ info_title }} <span class="{{ badge_class }} badge badge-pill badge-info">{{ info_value }}</span>
+<div class="col-sm-12 text-primary">
+  <i class="{{ icon_type }}"></i> {{ info_title }} <span
+    class="{{ badge_class }} badge badge-pill badge-primary">{{ info_value }}</span>
 </div>
