--- a/templates/_sidepanel.html
+++ b/templates/_sidepanel.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h4 class="pl-3 text-info">{{ report.name }}</h4>
+        <h4 class="pl-3 text-primary">{{ report.name }}</h4>
       </div>
     </div>
     {% include "_alert.html" %}
