--- a/templates/profile.html
+++ b/templates/profile.html
@@ -39,7 +39,7 @@
       </ul>
       <div class="text-center">
         {% if request.user.is_staff %}
-        <a href="{% url 'admin:index' %}" class="btn btn-warning">
+        <a href="{% url 'admin:index' %}" class="btn btn-success">
           <i class="fas fa-rocket"></i>
           <strong>Mission Control</strong>
         </a>
