--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <div class="jumbotron jumbotron-fluid galaxy-banner">
   <div class="container text-center">
     <h1 class="text-white "><strong>Explore your data.</strong></h1>
-    <a href="{% url "login" %}" class="btn btn-lg btn-warning text-white"><span class="small">LAUNCH</span></a>
+    <a href="{% url "login" %}" class="btn btn-lg btn-success text-white"><span class="small">LAUNCH</span></a>
   </div>
 </div>
 
@@ -13,7 +13,7 @@
   <div class="row">
     {% for stat in stats %}
     <div class="col-sm-2 {% if stat == stats|first %}offset-sm-2{% endif %} text-center">
-      <h1 class="text-dark-orange">{{ stat.value|intcomma }}</h1>
+      <h1 class="text-dark-green">{{ stat.value|intcomma }}</h1>
       <h5 class="text-dark-blue">{{ stat.metric }}</h5>
     </div>
     {% endfor %}
