--- a/templates/_hh_legend.html
+++ b/templates/_hh_legend.html
@@ -2,7 +2,7 @@
     <p><strong>Goals differ by school and metric.</strong> For each metric, schools close to our benchmarks have the
         same
         achievement-oriented goals, while schools further from these have the same growth-oriented goals.</p>
-    <p><em><span class="text-dark-orange">Click the metric score to see a growth chart.</span></em></p>
+    <p><em><span class="text-info">Click the metric score to see a growth chart.</span></em></p>
 </div>
 <div class="row ml-1">
     <p><strong>Color Legend:</strong></p>
