--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -11,7 +11,7 @@
       <h1>High Health ({{ school_level.display_name }})</h1>
     </div>
     <div class="col-sm-3 text-right">
-      <button type="button" onclick="openNav()" class="btn btn-warning btn-circle hh-info" data-toggle="popover"
+      <button type="button" onclick="openNav()" class="btn btn-success btn-circle hh-info" data-toggle="popover"
         data-placement="left" title="High Health Goals" data-trigger="hover"
         data-content='{% include "_hh_legend.html" %}'>
         <i class="fas fa-info"></i>
