Add conditional link to search cards

--- a/templates/_search_card.html
+++ b/templates/_search_card.html
@@ -1,6 +1,13 @@
 <div class="card mt-3">
   <div class="card-body">
-    <h5 class="card-title text-primary"><a class="search_link" href="{% url 'report' report.id %}">{{ report.name }}</a>
+    <h5 class="card-title text-primary">
+      {% if report.is_embedded %}
+      <a class="search_link" href="{% url 'report' report.id %}">
+        {% else %}
+        <a class="search_link" href={{ report.url }}>
+          {% endif %}
+          {{ report.name }}
+        </a>
     </h5>
     <h6 class="card-subtitle mb-2 text-muted"><span class="badge badge-light">{{ report.category }}</span></h6>
     <p class="card-text">{{ report.description }}</p>
