--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -26,7 +26,8 @@
     <table class="table table-hover mt-3">
       <thead>
         <tr class="small text-center">
-          <th>EQ</th>
+          <!--Essential Question renamed to Priority, but is still called EQ in models-->
+          <th>Priority</th>
           <th>Metric</th>
           <th>Updated</th>
           {% for school in schools %}
