Make danger color red again

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
   --secondary-color: #84878A;
   --warning-color: #FFB648;
   --offset-color: #F47D4E;
-  --danger-color: #84878A;
+  --danger-color: #E8605D;
   --info-color: #5F9CDA;
   --muted-color: #C9C9C9;
   --light-color: #F0F0F0;
