Changed CSS to change cursor to pointer on HH metrics

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,10 @@ h1 {
   font-weight: 300;
 }
 
+span[id="metric-hover"] {
+  cursor: pointer
+}
+
 .text-primary, a {
   color: var(--primary-color) !important;
 }
