--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -70,7 +70,7 @@
             {% with "chart_"|addstr:measure.metric.id|addstr:"_"|addstr:measure.school.id as chart_id %}
             <span data-toggle="modal" data-target="#{{ modal_id }}" class="hh_value text-{{ measure|goal_format }}"
               data-metric-id="{{ measure.metric.id }}" data-school-id="{{ measure.school.id }}">
-              <span data-toggle="tooltip" data-placement="right" title="{{ measure|goal_distance }}">
+              <span id="metric-hover" data-toggle="tooltip" data-placement="right" title="{{ measure|goal_distance }}">
                 {{ measure.value|floatformat:"0" }}%
               </span>
             </span>
