Rooling back 6a2bc84

--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -40,7 +40,7 @@
         {% for metric in metrics %}
         <tr>
           <td class="text-center eq" data-toggle="popover" data-trigger="hover"
-            title="{% if metric.metric.essential_question.name == 'Priority' %}P{% else %} {% end if %}"
+            title="{{ metric.metric.essential_question }}"
             data-content="{{ metric.metric.essential_question.description }}">
             {{ metric.metric.essential_question }}
           </td>
