--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -39,15 +39,17 @@
       <tbody>
         {% for metric in metrics %}
         <tr>
-          <td class="text-center eq" data-toggle="popover" data-trigger="hover"
-            title="{{ metric.metric.essential_question }}"
-            data-content="{{ metric.metric.essential_question.description }}">
-            {% if metric.metric.essential_question=="Priority" %}
+          {% if metric.metric.essential_question=="Priority" %}
+            <td class="text-center eq" data-toggle="popover" data-trigger="hover"
+              title="{{ metric.metric.essential_question }}"
+              data-content="{{ metric.metric.essential_question.description }}">
               P
-            {% else %}
-              -
-            {% end if %}
-          </td>
+            </td>
+          {% else %}
+            <td class="text-center eq" title="None">
+              --
+            </td>
+          {% end if %}
           <td style="min-width:240px">
             <i class="fas fa-info-circle text-primary pl-1 metric-def" data-toggle="popover" data-trigger="hover"
               title="{{ metric.metric }}" data-content="{{ metric.metric.definition }}"></i>
