Removed 'title' attribute from td element

--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -46,7 +46,7 @@
               P
             </td>
           {% else %}
-            <td class="text-center eq" title="None">
+            <td class="text-center eq">
               --
             </td>
           {% endif %}
