Replaceing '--' with blanks on HH priority column'

--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -47,7 +47,7 @@
             </td>
           {% else %}
             <td class="text-center eq">
-              --
+              <!-- Intentionally left blank -->
             </td>
           {% endif %}
           <td style="min-width:240px">
