Updated profile page to use Profile data

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,7 +24,7 @@
       </span>
 
       {% endif %}
-      <h3 class="card-title text-center pt-3">{{ user.first_name }} {{ user.last_name }}</h3>
+      <h3 class="card-title text-center pt-3">{{ profile.first_name }} {{ profile.last_name }}</h3>
       <h6 class="text-center text-muted">{{ profile.job_title }}</h6>
       <ul class="list-unstyled pt-3">
         <hr class="col-sm-3">
