Add if block in template to handles negative placeholders

--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -51,7 +51,7 @@
             </span>
           </td>
           {% for measure in metric.measures %}
-          {% if measure is None or measure.value is None %}
+          {% if measure is None or measure.value < 0 %}
             <td class="text-center">
               <span class="text-muted"  id="metric-hover" data-toggle="tooltip" data-placement="right" title="No data for this school and metric">
                 N/A
