--- a/templates/_sidepanel.html
+++ b/templates/_sidepanel.html
@@ -36,11 +36,13 @@
     <div class="row mt-5 pl-5">
       {% include "_report_stats.html" with icon_type="fa fa-heart" info_title="favorited by" badge_class="fav-badge" info_value=favorited_by %}
       {% if viewed_by %}
-      {% include "_report_stats.html" with icon_type="far fa-user" info_title="recently viewed by" badge_class="view-count-badge" info_value=viewed_by %}
+        {% include "_report_stats.html" with icon_type="far fa-user" info_title="recently viewed by" badge_class="view-count-badge" info_value=viewed_by %}
       {% endif %}
       {% if avg_feedback %}
-      {% include "_report_stats.html" with icon_type="fas fa-chart-pie" info_title="average feedback score" badge_class="avg-feedback" info_value=avg_feedback %}
-      {% include "_report_stats.html" with icon_type="fas {{ feedback.score|sentiment_icon }}" info_title="your feedback score" badge_class="score-badge" info_value=feedback.score %}
+        {% include "_report_stats.html" with icon_type="fas fa-chart-pie" info_title="average feedback score" badge_class="avg-feedback" info_value=avg_feedback %}
+      {% endif %}
+      {% if feedback %}
+        {% include "_report_stats.html" with icon_type="fas {{ feedback.score|sentiment_icon }}" info_title="your feedback score" badge_class="score-badge" info_value=feedback.score %}
       {% endif %}
     </div>
 
